# coder-FedericoFurgiuele

./: README.md  hello.py  pyproject.toml
docs/: Pasos.md  clonar_repos.md  configurar_django.md
scr/config/: settings.py
src/: db.sqlite3
src/cliente/: admin.py  models.py  views.py
src/cliente/migrations/: 0001_initial.py  0002_pais_cliente_nacimiento_cliente_pais_origen.py
src/cliente/templates/cliente/: cliente_list.html  index.html  pais_list.html
src/config/: settings.py  urls.py
src/core/: views.py
src/core/templates/core/: dados.html  ejercicio1.html  index.html  notas.html  respondiendo_template.html
