[project]
name = "coder-federicofurgiuele"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.3",
]

[tool.ruff]
line-length = 100
exclude = [".venv", "migrations", "manage.py"]

[tool.ruff.format]
quote-style = "single"  # Cadenas con comillas simples simples

[tool.ruff.lint]
extend-select = ["F", "I", "N", "A"] # Conjunto de reglas: N (nombres) R (refactorizaciones) I (importaciones) A (builtins) F (varios)
ignore = ["F401"] # F401 importaciones no usadas 

[tool.djlint]
profile="django"
use_gitignore=true
close_void_tags=true
max_line_length=100
ignore="H021,T002,H030,H031"
blank_line_before_tag="block"
blank_line_after_tag="load,extends,endblock"
format_attribute_template_tags=true
line_break_after_multiline_tag=false

[dependency-groups]
dev = [
    "djlint>=1.36.2",
    "ipython>=8.29.0",
]
